--- a/src/app/shared/components/default-header/default-header.component.html
+++ b/src/app/shared/components/default-header/default-header.component.html
@@ -31,7 +31,7 @@
         <div class="header-bottom_right">
             <ul class="dis-flex">
                 <li title="Search"><i class='bx bx-search-alt-2'></i></li>
-                <li title="Cart" class="cart">
+                <li title="Cart" class="cart" routerLink="/cart">
                     <i class='bx bx-shopping-bag'></i>
                     <span class="counter">0</span>
                 </li>
