--- a/src/app/default/components/display-products/display-products.component.html
+++ b/src/app/default/components/display-products/display-products.component.html
@@ -4,6 +4,7 @@
 <ng-container *ngIf="products?.length > 0">
     <div class="products_list">
         <div class="products_list_item" *ngFor="let product of products">
+            <span class="sold-out">Sold out</span>
             <a [href]="product.image">
                 <!-- <img [src]="product.image" alt="image" class="products_list_item_img" > -->
                 <img src="../../../../assets/img/wall-deco.jpg" alt="image" class="products_list_item_img" >
