--- a/src/app/default/components/display-products/display-products.component.scss
+++ b/src/app/default/components/display-products/display-products.component.scss
@@ -17,8 +17,17 @@
         grid-gap: $s-2;
         border-bottom: 1px solid transparent;
         transition: all .2s ease-in;
+        position: relative;
         &:hover {
             border-bottom: 1px solid $secondary2;
+        }
+        .sold-out {
+            position: absolute;
+            top: 0;
+            color: $white-color;
+            background-color: $secondary2;
+            padding: $s-1;
+            border-radius: $border-radius1 0 0 0;
         }
         &_img {
             width: 100%;
