--- a/src/app/shared/components/default-header/default-header.component.html
+++ b/src/app/shared/components/default-header/default-header.component.html
@@ -1,4 +1,4 @@
-<div class="header-bottom">
+<div class="header-bottom" [ngClass]="{ show: windowScrolled }">
     <div class="container dis-flex">
         <div class="logo" routerLink="/">
             <!-- <img src="../../../../assets/img/MOYIN/50-1.svg" alt="">
