--- a/src/app/shared/components/default-header/default-header.component.scss
+++ b/src/app/shared/components/default-header/default-header.component.scss
@@ -2,17 +2,21 @@
 @import '../../../../assets/css/mixins.scss';
 
 .header-bottom {
-    // display: flex;
-    // align-items: center;
     width: 100%;
     background-color: $white-color;
     border-bottom: 1px solid $grey2;
-    padding: 1rem 0;
+    padding: $s-2 0;
     font-size: 15px;
-
-    // position: fixed;
-    // width: 100%;
-    // z-index: 150;
+    &.show {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        padding: $s-1;
+        z-index: 150;
+        .logo {
+            width: 80px;
+        }
+    }
     .container {
         justify-content: space-between;
     }
