--- a/src/app/default/components/home/home-hero/home-hero.component.html
+++ b/src/app/default/components/home/home-hero/home-hero.component.html
@@ -4,7 +4,7 @@
         <h2 class="title">Shopping at <span>Moheen Collections</span></h2>
         <button class="btn prim_btn uc" routerLink="/products">Shop Now</button>
     </div>
-    <div class="hero_more">
+    <!-- <div class="hero_more">
         <span></span>
-    </div>
+    </div> -->
 </section>
