--- a/src/app/shared/components/default-header/default-header.component.scss
+++ b/src/app/shared/components/default-header/default-header.component.scss
@@ -89,7 +89,7 @@
                         position: absolute;
                         bottom: -5px;
                         right: -5px;
-                        @include icon-area(20px, $grey2);
+                        @include icon-area(20px, $error1);
                         color: $white-color;
                     }
                 }
