upload images to firbase

--- a/src/app/admin/components/admin-products/add-admin-product/add-admin-product.component.html
+++ b/src/app/admin/components/admin-products/add-admin-product/add-admin-product.component.html
@@ -155,7 +155,7 @@
           *ngIf="isFormSubmitted && productForm.controls.totalQuantity.errors"
         >
           <small *ngIf="productForm.controls.totalQuantity.errors.required"
-            >totalQuantity is required</small
+            >Total Quantity is required</small
           >
         </div>
       </div>
