--- a/src/app/default/components/cart/cart.component.html
+++ b/src/app/default/components/cart/cart.component.html
@@ -29,8 +29,8 @@
                             <p class="">
                                 {{product?.name}}
                             </p>
-                            <!-- <img [src]="product?.image" alt="image"> -->
-                            <img src="../../../../assets/img/throw-pillows.jpg" alt="">
+                            <img [src]="product?.imageUrl" alt="image">
+                            <!-- <img src="../../../../assets/img/throw-pillows.jpg" alt=""> -->
                         </td>
                         <td>{{product?.price}}</td>
                         <td class="qauntity">
