--- a/src/app/default/components/product-details/product-details.component.html
+++ b/src/app/default/components/product-details/product-details.component.html
@@ -7,8 +7,8 @@
 
 <div class="product-details">
     <div class="product-details_img">
-        <!-- <img [src]="currentProduct?.image" alt="image"> -->
-        <img src="../../../../assets/img/wall-deco.jpg" alt="">
+        <img [src]="currentProduct?.imageUrl" alt="image">
+        <!-- <img src="../../../../assets/img/wall-deco.jpg" alt=""> -->
     </div>
     <div class="product-details_content">
         <div class="product-details_content_categ">
