scroll to a section

--- a/src/app/default/components/home/home-about/home-about.component.html
+++ b/src/app/default/components/home/home-about/home-about.component.html
@@ -1,4 +1,4 @@
-<section class="about sect">
+<section class="about sect" id="about">
     <div class="container mc_flex_content">
         <div class="about_details mc_flex_details">
             <h2 class="mc_flex_details_title">About Us</h2>
