--- a/src/app/default/components/home/home-contact/home-contact.component.html
+++ b/src/app/default/components/home/home-contact/home-contact.component.html
@@ -1,4 +1,4 @@
-<section class="contact sect">
+<section class="contact sect" id="contact">
     <div class="container">
         <div class="sect_header">
             <h2>Contact Us</h2>
